Added Java files for SQL flowlet